[gd_scene load_steps=4 format=3 uid="uid://qv3umu7jkbpn"]

[ext_resource type="Texture2D" uid="uid://c3tq2lmooiajy" path="res://icon.svg" id="1_e5o5g"]
[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_isgnd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nvor3"]
radius = 21.0
height = 72.0

[node name="Player" type="CharacterBody2D"]
floor_constant_speed = true
script = ExtResource("1_isgnd")
wall_time_to_descent = 1.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.328125, 0.5625)
texture = ExtResource("1_e5o5g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_nvor3")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="Timers" type="Node" parent="."]

[node name="WallJumpTimer" type="Timer" parent="Timers"]
wait_time = 0.15
one_shot = true

[node name="CoyoteTime" type="Timer" parent="Timers"]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="Timers/WallJumpTimer" to="." method="_on_wall_jump_timer_timeout"]
[connection signal="timeout" from="Timers/CoyoteTime" to="." method="_on_coyote_time_timeout"]
